--- a/src/components/descripcion/Descripcion.css
+++ b/src/components/descripcion/Descripcion.css
@@ -1,20 +1,27 @@
-#descripcion{
+.inf{
+    width: 100%;
+    height: 100%;  
     display: flex;
-    padding: 5rem;
+    justify-content: space-around;  
+}
+
+.contenidoInfo{
+    padding: 2rem;
+    margin-left: 3.5rem;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content:space-between;
+    font-family: 'roboto', sans-serif;
 }
 
-.text-descripcion{
-    flex-basis: 70%;
-    
+
+#textoInf{
+    font-size: 1.1em;
+    width: 60%;
 }
 
-.img-descripcion{
-    flex-basis: 30%;
-    text-align: center;
-}
 
-.img-descripcion img{
-    width: 50%;
+#imgInf img{
+    width: 65%;
+    height: 65%;
 }
