--- a/src/index.css
+++ b/src/index.css
@@ -28,4 +28,243 @@ h1,h2,h3,h4,h5{
     font-family: 'Marcellus', serif;
 }
 
+@media screen and (min-width: 769px) 
+{
+      .logo i{
+            display: none;
+      }
+
+      .menu-hr{
+            display: none;
+      }
+
+      .texto1-footer hr{
+            display: none;
+      }
+
+      .texto2-footer hr{
+            display: none;
+      }
+
+      #txt{
+            display: flex;
+            font-family: 'roboto', sans-serif;
+            font-size: 2rem;
+            background-color: rgba(0,0,0,0.35);
+            color: white;
+            text-align: left;
+            margin-left: -22%;
+    margin-right: -22%;
+    margin-bottom: -3%;
+      }
+      
+      #txt p{
+            
+            padding-bottom: -2rem;
+            
+      }
+     
+      
+}
+
+@media screen and (min-width: 200px) and (max-width: 768px) {
+
+    body{
+          margin: 0;
+    }
+
+
+    .logo{
+          background-color: var(--negro2);
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          height: 100%;
+          width: 100%;
+          padding: 1%;
+    }
+
+
+    .logo img{
+          height: 2rem; 
+    }
+
+
+    .logo i{
+          color: var(--blanco);
+          font-size: 2rem;
+    }
+
+
+    .menu{
+          background-color: rgba(1, 10, 52, 0.63);
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;  
+    }
+
+
+    .menu hr{
+          width: 100%;
+          background-color: var(--blanco);
+          
+    }
+
+
+    .item{
+      padding: 1rem;
+    }
+    
+    
+    nav a{
+          color: var(--blanco);
+          text-decoration: none;
+          text-align: center;
+    }
+   
+   
+    nav a:hover{
+          background-color: #0B3860;
+          width: 100%;
+    }
+
+    
+    nav{
+          display: flex;
+          flex-direction: column;
+          padding: 1%;
+          background-color: #000;   
+          transition: .5s ease;       
+    }
+
+
+    .menu{
+          display: none;
+          width: 100%;
+          transition: .5s ease;  
+    }
+
+    .menu.active
+    {
+          display: flex;
+          transform: translateY(0%);
+    }
+
+
+    .feature {
+          width: 25;
+          min-width: 180px;
+          max-width: 230px;
+          margin: 1rem;
+          padding: 0.8rem;
+          margin-bottom: 1rem;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          border-radius: 3px;
+      }
+
+    .features-description{
+          display: flex;
+          flex-flow: row wrap;
+          justify-content: space-around;
+      }
+    
+    
+    .footer{
+          margin-top: 3rem;
+    }
+
+    
+    .text-footer{
+          display: flex;
+          flex-direction: column;
+    }
+
+
+    .texto1-footer{
+          width: 100%;
+    }
+
+
+    .texto2-footer{
+          width: 100%;
+    }
+
+
+    .texto3-footer{
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          width: 100%;
+    }
+
+
+    #separador{
+          margin-top: 0%;
+    }
+
+
+    .direccion{
+          display: flex;
+          flex-direction: column;
+          font-size: 0.8em;
+    }
+
+
+    .titulo{
+          height: 4em;
+    }
+
+
+    .titulo h1 {
+          font-size: 1em;
+    }
+
+
+    .calific{
+          height:20em ;
+    }
+      
+      
+    .nombreP{
+          display: flex;
+          color: #fff;
+    }
+    .descripcion{
+        position: relative;
+        display: flex;
+        align-items: center;
+        height: 100%;
+        padding-left: 1.5rem;
+        margin-bottom: 3rem;
+        margin:0.4rem;
+        font-size: 1.2rem;
+    }
+
+
+  .cards{
+        display: none;
+    }
+
+
+  #imgInf{
+        display: none;
+  }
+
+
+  #textoInf{
+        width: 100%;
+  }
+
+  
+  .contenidoInfo{
+        
+        margin-left: 0.5rem;
+      
+  }
+
+}
 
