Vista de registro

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -38,11 +38,11 @@ nav a:hover{
     width: 100%;
 }
 
-.logo img{
+.logoN img{
     height: 4rem;     
 }
 
 
-.logo i{
+.logoN i{
     background-color: #000;
 }
