--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ h1,h2,h3,h4,h5{
 
 @media screen and (min-width: 769px) 
 {
-      .logo i{
+      .logoN i{
             display: none;
       }
 
@@ -46,7 +46,7 @@ h1,h2,h3,h4,h5{
             display: none;
       }
 
-      #txt{
+      .txt{
             display: flex;
             font-family: 'roboto', sans-serif;
             font-size: 2rem;
@@ -54,13 +54,13 @@ h1,h2,h3,h4,h5{
             color: white;
             text-align: left;
             margin-left: -22%;
-    margin-right: -22%;
-    margin-bottom: -3%;
+            margin-right: -22%;
+            margin-bottom: -3%;
       }
       
-      #txt p{
-            
-            padding-bottom: -2rem;
+      .txt p{
+            margin: 2rem;
+            padding-bottom: 1rem;
             
       }
      
@@ -74,7 +74,7 @@ h1,h2,h3,h4,h5{
     }
 
 
-    .logo{
+    .logoN{
           background-color: var(--negro2);
           display: flex;
           align-items: center;
@@ -85,12 +85,12 @@ h1,h2,h3,h4,h5{
     }
 
 
-    .logo img{
+    .logoN img{
           height: 2rem; 
     }
 
 
-    .logo i{
+    .logoN i{
           color: var(--blanco);
           font-size: 2rem;
     }
@@ -112,9 +112,7 @@ h1,h2,h3,h4,h5{
     }
 
 
-    .item{
-      padding: 1rem;
-    }
+   
     
     
     nav a{
@@ -233,16 +231,7 @@ h1,h2,h3,h4,h5{
           display: flex;
           color: #fff;
     }
-    .descripcion{
-        position: relative;
-        display: flex;
-        align-items: center;
-        height: 100%;
-        padding-left: 1.5rem;
-        margin-bottom: 3rem;
-        margin:0.4rem;
-        font-size: 1.2rem;
-    }
+   
 
 
   .cards{
