--- a/src/components/contenedor/Contenedor.css
+++ b/src/components/contenedor/Contenedor.css
@@ -15,7 +15,6 @@
     --degradado: linear-gradient(49.54deg, #337AB7 2.89%, #0B3860 80.34%);
 }
 
-@media screen and (min-width: 1024px){
 
 
 *{
@@ -29,6 +28,9 @@
     max-height: 50%;
     padding-top: 12rem;
 }
+
+
+
 
 .contenedor{
     padding-top: 0;
@@ -52,7 +54,7 @@
     align-items: center;
 }
 
- .caja i{
+ .caja .login{
     background-color: var(--Magenta);
     font-size: 2rem;
     border-radius: 50%;
@@ -77,12 +79,12 @@
    
 }
 
-label{
+.label{
     font-family: 'Roboto', sans-serif;
     text-shadow: -1px 1px rgb(97, 97, 97);
 }
 
-input{
+.input{
     padding-bottom: 8px;
     border: none;
     padding-left: 5rem;
@@ -90,7 +92,7 @@ input{
     box-shadow: 0px 1px rgba(97, 97, 97,500);
 }
 
-#boton{
+.boton{
     font-size: 1rem;
     color: #fff;
     background-color: var(--negro2);
@@ -108,7 +110,7 @@ p a{
     color: var(--negro2);
 }
 
-p{
+.cuenta{
     font-family: 'Roboto', sans-serif;
     font-size: 0.8rem ;
     text-align: center;
@@ -128,10 +130,10 @@ p{
     
    
 }
-}
 
 
-@media screen and (min-width: 320px){
+
+@media screen and (min-width: 320px ){
     *{
         margin: 0;
     }
@@ -179,7 +181,7 @@ p{
         align-items: center;
     }
     
-     /*i{
+    .caja.login{
         background-color: var(--Magenta);
         font-size: 2rem;
         border-radius: 50%;
@@ -190,7 +192,7 @@ p{
         align-items: center;
         margin-bottom: 1rem;
         margin-top: 2rem;
-    }*/
+    }
     
     
     
@@ -202,12 +204,12 @@ p{
        
     }
     
-    label{
+    .label{
         font-family: 'Roboto', sans-serif;
         text-shadow: -1px 1px rgb(97, 97, 97);
     }
     
-    input{
+    .input{
         padding-bottom: 8px;
         border: none;
         padding-left: 0.5rem;
@@ -215,7 +217,7 @@ p{
         box-shadow: 0px 1px rgba(97, 97, 97,500);
     }
     
-    #boton{
+    .boton3{
         font-size: 1rem;
         color: #fff;
         background-color: var(--negro2);
@@ -233,7 +235,7 @@ p{
         color: var(--negro2);
     }
     
-    p{
+    .cuenta{
         font-family: 'Roboto', sans-serif;
         font-size: 0.8rem ;
         text-align: center;
@@ -290,7 +292,7 @@ p{
         align-items: center;
     }
     
-    /* i{
+    .caja.login{
         background-color: var(--Magenta);
         font-size: 2rem;
         border-radius: 50%;
@@ -301,7 +303,7 @@ p{
         align-items: center;
         margin-bottom: 1rem;
         margin-top: 2rem;
-    }*/
+    }
     
     
     
@@ -313,12 +315,12 @@ p{
        
     }
     
-    label{
+    .label{
         font-family: 'Roboto', sans-serif;
         text-shadow: -1px 1px rgb(97, 97, 97);
     }
     
-    input{
+    .input{
         padding-bottom: 8px;
         border: none;
         padding-left: 5rem;
@@ -326,7 +328,7 @@ p{
         box-shadow: 0px 1px rgba(97, 97, 97,500);
     }
     
-    .boton{
+    .boton3{
         background-color: var(--negro2);
         width: 68%;
         font-family: 'Marcellus', serif;
@@ -337,7 +339,7 @@ p{
         box-shadow: 0px 1px rgba(97, 97, 97,500);
     }
 
-    .boton a{
+    .boton3 a{
         text-decoration: none;
         font-size: 1rem;
         color: #fff;
@@ -348,7 +350,7 @@ p{
         color: var(--negro2);
     }
     
-    p{
+    .cuenta{
         font-family: 'Roboto', sans-serif;
         font-size: 0.8rem ;
         text-align: center;
