--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,51 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Marcellus&family=Roboto:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-:root{
-  --azulclaro: #48D6ED;
-  --azuloscuro: #337AB7;
-  --azulnegro: #303342;
-  --negro: #333333;
-  --negro2: #000;
-  --gris: #B2B3B3;
-  --fondo: #FFFEFC;
-  --verdeazul: #157A8A;
-  --Magenta: #9C2759;
-  --blanco: #fff;
-  --degradado: linear-gradient(49.54deg, #337AB7 2.89%, #0B3860 80.34%);
-}
-
-
-*{
-    margin: 0%;
-}
-
-
-.menu{
-      font-family: 'Marcellus', serif;
-      font-size: 16px;
-      background: url(./fondoDash.jpg);
-      background-size: cover;
-      background-repeat: no-repeat;
-}
-
-   
-h1,h2,h3,h4,h5{
-      font-family: 'Marcellus', serif;
-}
-
-
-section{
-      display: flex;
-}
-
-
-.menuu{
+.menuDash{
       width: 17%;   
       color: white;
       display: flex;
       flex-direction: column;
       height: 100vh;  
       position: fixed;
+    
 }
 
 
@@ -73,29 +33,39 @@ section{
 }
 
 
-.logo img{
+.logoDash img{
       width: 60%;   
 }
 
 
-.logo .mobile{
+.logoDash .mobile{
     display: none;
 }
 
 
-.logo{
+.logoDash{
       display: flex;
       justify-content: center;
 }
 
 
-.descripcion{
+.descripcionDash{
       display: flex;
       justify-content: flex-end;
+      
+}
+
+.descripcionDash h3{
+      font-size: 18px;
+      font-weight: bolder;
+}
+.descripcionDash h4{
+      font-size: 11.5px;
+      font-weight: bolder;
 }
 
 
-.descripcion img{
+.descripcionDash img{
     display: none;
 }
 
@@ -121,14 +91,39 @@ section{
       background-color: rgb(62, 62, 83);
       display: flex;
       justify-content: end;
+      text-decoration: none;
+      color: #fff;
+}
+
+.cerrar a:hover{
+      color: #fff;
 }
 
 
-a{     
+
+
+.servicios a{     
       text-decoration: none;
       display: flex;
       flex-direction: row;
       align-items: center;
       color: white;
-      font-size: 1.2em;
+      font-size: 1em;
+}
+
+
+
+i#iconS{
+     transition: .3s all ease;
+      margin: 5%;
+      color: white;
+      margin-right: 10%;
+}
+
+
+.serv:hover{
+      background-color: var(--azuloscuro);
+      width: 90%;
+      height: 100%;
+      color: #fff;
 }
