--- a/src/components/encabezado-registro/Encabezado-registro.css
+++ b/src/components/encabezado-registro/Encabezado-registro.css
@@ -1,4 +1,4 @@
-.encabezado{
+.bodyR{
     background: url(./fondo.jpg)no-repeat;
     background-size: cover;
 }
@@ -24,8 +24,8 @@
     align-items: center;
 }
 
-.container{
-    width: 60%;
+.container-registro{
+    width: 68%;
     height: 100%;
     margin-left: 30%;
     border-radius: 1%;
@@ -43,9 +43,9 @@ label{
     margin-bottom: 0.3rem;
 }
 
-input{
+.input2{
     width: 100%;
-    padding: 2%;
+    padding: 1%;
     border: none;
     border-bottom: var(--gris) solid .2em;  
     margin-bottom: 0.5rem;
@@ -66,15 +66,15 @@ input{
 }
 
 
-.container .titulo{
+.container-registro .tituloR{
     display: flex;
     justify-content: center;
     align-self: center;
-    margin-top: 1%;
     width: 57%;
     height: 10%;
-    font-size: 2rem;
-    margin: 1rem;
+    font-size: 3rem;
+    margin-top: -1rem;
+    font-weight: lighter;
 }
 
 .form{
@@ -87,7 +87,6 @@ input{
 
 .derecha{
     width: 50%;
-    height: 88%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -141,19 +140,72 @@ input{
   display: none;
 }
 
-.boton{
+
+.modal{
+    background-color: rgba(0,0,0,0.7);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    padding-top: 100px;
     display: none;
+}
+
+.contenidoModal{
+    background-color: #FFFFFF;
+    width: 30%;
+    margin: auto;
+    position: relative;
+    animation-name: animarmodal;
+    animation-duration: 0.5s;
+    padding-bottom: 1rem;
+    
+}
+
+.contenidoModal h2{
+    background: rgb(47,100,148);
+    background: linear-gradient(90deg, rgba(47,100,148,1) 0%, rgba(11,56,96,1) 100%);
+    text-align: center;
+    color: #FFFFFF;
+    padding: 0.7rem;
+}
+
+.contenidoModal button{
+    width: 32%;
+    display: flex;
+    justify-content: center;
+    margin-left: 8rem;
+}
+
+.p{
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 
 
+
 @media screen and (min-width: 200px) and (max-width: 600px){
-body{
+.bodyR{
    
     background: url(./fondo.jpg)no-repeat;
     background-size: cover;
-    width: 100vh;
+    
    
+}
+
+.container-registro {
+    width: 91%;
+    height: 185vh;
+    margin: auto;
+    border-radius: 1%;
+    background-color: rgba(255, 255, 255, 0.74);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 3%;
+    margin-top: 10rem;
 }
    
 h1,h2,h3,h4,h5{
@@ -166,19 +218,6 @@ h1,h2,h3,h4,h5{
 }
 
 
-.menu{
-    width: 100vh;   
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 20vh;  
-    background-color: #0b3860af;
-    font-size:xx-large;
-    align-content: center;
-    margin-top: 2rem;
-}
 
 .encabezado{
     display: flex;
@@ -206,21 +245,7 @@ h1,h2,h3,h4,h5{
     align-items: center;
 }
 
-.container{
-    position: unset;
-    width: 76vh;
-    height: auto;
-    border-radius: 1%;
-    background-color: rgba(255, 255, 255, 0.74);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-self: center;
-    margin: 1rem;
-    padding: 3%;
-    margin-top: 1rem;
-    
-}
+
 
 label{
     font-family: 'Roboto', sans-serif;
@@ -229,7 +254,7 @@ label{
     font-size: 0.9rem;
 }
 
-input{
+.input2{
     width: 100%;
     padding: 1.5%;
     border: none;
@@ -237,12 +262,12 @@ input{
     margin-bottom: 0.5rem;
 }
 
-.terminos{
+.terminos2{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 1rem;
+   
     
    
 }
@@ -252,39 +277,43 @@ input{
    
 }
 
-.container .titulo{
+.container-registro .tituloR{
     display: flex;
     justify-content: center;
     align-self: center;
     padding-top: 2rem;
     width: 57%;
     height: 10%;
-    font-size: 1.5rem;
-    margin: 1rem;
+    font-size: 3rem;
+    margin-top: -1rem;
+    font-weight: lighter;
 }
 
 .form{
-    
-    width: 90%;
-    height: 90%;
+    display:block;
+    width: 100%;
+    height: 100%;
    
    
 }
+
 
 .derecha{
     width: 100%;
-    
+    margin-top: -21rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     padding: 0 5% 0 5%;
 }
-
-.izquierda{
+.izquierda {
     width: 100%;
-   
-   
-    
-    padding: 0 5% 0 5%;
-}
+    height: 88%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 
+}
 .derecha .generos{
     display: flex;
     flex-direction: row;
@@ -293,12 +322,13 @@ input{
     margin-bottom: 1rem;
 }
 
-.boton{
+.boton2{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 6.5rem;
-    margin-top: 1%;
+    display: flex;
+    justify-content: center;
+    margin: 0;
     width: 43%;
     padding: 0.9%;
     border-radius: 2px;
@@ -315,12 +345,5 @@ input{
     color: white;
 }
 
-.terminos2{
-    display: none;
-  }
-
-  .boton2{
-      display: none;
-  }
 
 }
