--- a/src/components/encabezado-registro/Encabezado-registro.css
+++ b/src/components/encabezado-registro/Encabezado-registro.css
@@ -36,6 +36,18 @@
     padding: 3%;
 }
 
+.container-registro2{
+    width: 80%;
+    height: 100%;
+    margin: auto ;
+    border-radius: 1%;
+    background-color: rgba(255, 255, 255, 0.74);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 3%;
+}
+
 
 label{
     font-family: 'Roboto', sans-serif;
@@ -207,6 +219,7 @@ label{
     padding: 3%;
     margin-top: 10rem;
 }
+
    
 h1,h2,h3,h4,h5{
     font-family: 'Marcellus', serif;
